.kubernetes-old/base/shared.namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: shared
  labels:
    shared-gateway-access: "true"
