.kubernetes-old/base/default.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-page
  namespace: shared
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-page
  template:
    metadata:
      labels:
        app: default-page
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
          volumeMounts:
          - name: html-volume
            mountPath: /usr/share/nginx/html
      volumes:
        - name: html-volume
          configMap:
            name: default-page-content
---
apiVersion: v1
kind: Service
metadata:
  name: default-page-service
  namespace: shared
spec:
  selector:
    app: default-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
